anypoint-connector-devkit/v/3.4/packaging-your-connector-for-release.adoc
= Packaging Your Connector for Release

When your connector is ready for release to a broad audience, take the following additional steps to ensure user success:

* Create a license agreement for your connector.
* Develop end-to-end walkthroughs to illustrate performing common use cases with your connector.

image:/docs/plugins/servlet/confluence/placeholder/unknown-attachment?locale=en_GB&version=2[image,title="9-package.png"]

== Assumptions

This document assumes that you have successfully developed your connectors and documented them in preparation for their release. 

== Customize License Agreement

During connector installation, Studio presents the user with a license agreement. Customize the contents of this agreement to reflect your terms.

Maven first searches for a `LICENSE.md` file in the same directory as the `pom.xml` file during the build process.

If this file is not found, Maven goes through the following series of steps to locate a license agreement: 

. It checks for a `LICENSE.txt` file in the same directory as the `pom.xml` . 
. If the `pom.xml` file contains a *Licenses* section (as described in the http://maven.apache.org/pom.html#Licenses[Maven documentation]), DevKit attempts to to download the text from the license's URL, then saves the downloaded content as a new `LICENSE.md` file.
. If no license text is found by the above steps, the build fails.

== Create End-to-End Use Case Examples

One or more end-to-end demos can be extremely useful in helping users succeed with your connector. The https://github.com/mulesoft/box-connector/blob/master/doc/sample.md[Box connector] provides an excellent example of an effective connector use case, including a step-by-step walkthrough of installing and using the connector. 

== Certify and Publish Your Connector

Mulesoft's program certifies and publishes third party connectors to be distributed to the community on Mulesoft.org. For more information about this program, please mailto:connector_team@mulesoft.com[contact us].

== Next Steps

* link:/anypoint-connector-devkit/v/3.4/supporting-datasense-with-dynamic-data-models[Add DataSense] (design-time metadata awareness) to your connector.
* Research other link:/anypoint-connector-devkit/v/3.4/devkit-advanced-topics[advanced topics].
